cabal-version:      2.4
name:               hiedemo
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Colten Webb
maintainer:         coltenwebb@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable hiedemo
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Test

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.16.1.0,
                      ghc >=9.2.2,
                      process ^>=1.6.13.2
    hs-source-dirs:   app
    default-language: Haskell2010
